feat(model): switch default pipeline to glm-5 with glm-4.7 fallback

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -3,4 +3,6 @@ main = "index.js"
 compatibility_date = "2025-01-01"
 
 [vars]
-OPENAI_API_URL = "https://api.minimax.chat/v1/chat/completions"
+OPENAI_API_URL = "https://open.bigmodel.cn/api/paas/v4/chat/completions"
+PRIMARY_MODEL = "glm-5"
+FALLBACK_MODEL = "glm-4.7"
