--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -6,3 +6,6 @@ compatibility_date = "2025-01-01"
 OPENAI_API_URL = "https://open.bigmodel.cn/api/paas/v4/chat/completions"
 PRIMARY_MODEL = "glm-5"
 FALLBACK_MODEL = "glm-4.7"
+TOTAL_BUDGET_MS = "110000"
+PRIMARY_TIMEOUT_MS = "45000"
+FALLBACK_TIMEOUT_MS = "50000"
