feat: run glm-5 only with long timeout and hard-fail policy

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -5,7 +5,9 @@ compatibility_date = "2025-01-01"
 [vars]
 OPENAI_API_URL = "https://open.bigmodel.cn/api/paas/v4/chat/completions"
 PRIMARY_MODEL = "glm-5"
-FALLBACK_MODEL = "glm-4.7"
-TOTAL_BUDGET_MS = "60000"
-PRIMARY_TIMEOUT_MS = "22000"
-FALLBACK_TIMEOUT_MS = "26000"
+FALLBACK_MODEL = ""
+ALLOW_MODEL_FALLBACK = "false"
+ENABLE_EMERGENCY_FALLBACK = "false"
+TOTAL_BUDGET_MS = "180000"
+PRIMARY_TIMEOUT_MS = "90000"
+FALLBACK_TIMEOUT_MS = "0"
