perf: widen glm-5 timeout budget and disable client-side timeout abort

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -8,6 +8,7 @@ PRIMARY_MODEL = "glm-5"
 FALLBACK_MODEL = ""
 ALLOW_MODEL_FALLBACK = "false"
 ENABLE_EMERGENCY_FALLBACK = "false"
-TOTAL_BUDGET_MS = "180000"
-PRIMARY_TIMEOUT_MS = "90000"
+TOTAL_BUDGET_MS = "420000"
+PRIMARY_TIMEOUT_MS = "240000"
+PRIMARY_RETRIES = "1"
 FALLBACK_TIMEOUT_MS = "0"
