--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -7,7 +7,8 @@ OPENAI_API_URL = "https://open.bigmodel.cn/api/paas/v4/chat/completions"
 PRIMARY_MODEL = "glm-5"
 FALLBACK_MODEL = ""
 ALLOW_MODEL_FALLBACK = "false"
-ENABLE_EMERGENCY_FALLBACK = "false"
+ENABLE_EMERGENCY_FALLBACK = "true"
+EMERGENCY_TIMEOUT_ONLY = "true"
 TOTAL_BUDGET_MS = "420000"
 PRIMARY_TIMEOUT_MS = "240000"
 PRIMARY_RETRIES = "1"
