feat(stability): broaden emergency fallback and restore client local fallback

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -8,7 +8,7 @@ PRIMARY_MODEL = "glm-5"
 FALLBACK_MODEL = ""
 ALLOW_MODEL_FALLBACK = "false"
 ENABLE_EMERGENCY_FALLBACK = "true"
-EMERGENCY_TIMEOUT_ONLY = "true"
+EMERGENCY_TIMEOUT_ONLY = "false"
 TOTAL_BUDGET_MS = "420000"
 PRIMARY_TIMEOUT_MS = "240000"
 PRIMARY_RETRIES = "1"
